compiler/testData/diagnostics/tests/delegatedProperty/thisInDelegate.kt
// !DIAGNOSTICS: -UNUSED_PARAMETER
// !WITH_NEW_INFERENCE

import kotlin.reflect.KProperty

val Int.a by Delegate(<!NI;NO_THIS!><!NO_THIS!>this<!><!>)

class A {
  val Int.a by Delegate(<!NI;TYPE_MISMATCH!><!NI;TYPE_MISMATCH!><!TYPE_MISMATCH!>this<!><!><!>)
}

class Delegate(i: Int) {
  operator fun getValue(t: Any?, p: KProperty<*>): Int {
    return 1
  }
}
